added a welcome line

--- a/gallary.html
+++ b/gallary.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
 <style>
 body{
     background-color: lightsteelblue;
@@ -11,13 +13,17 @@ img{
     padding-left: 60px;
    
 }
+    h1{
+        font-family:"Dancing Script";
+     }
     
 </style>
 
     </head>
     <body>
+        <h1> Welcome to Our Gallery</h1>
       <marquee scrollamount="15"> <img src="pavan photo.jpeg" alt=""><img src="ews.jpeg" alt=""><img src="income certificate.jpeg" alt=""><img src="intigrated certificate.jpeg" alt=""><img src="obc.jpeg" alt=""></marquee>
       <marquee direction="up" scrollamount="15"><img src="job.jpeg" alt=""><img src="eda.jpeg" alt=""><img src="joba.jpeg" width="300px" alt=""></marquee>
-      <marquee direction="right" scrollamount="15"><img src="harikiran.jpeg"><img src="comexamb.jpeg" alt=""><img src="comexamc.jpeg" alt=""></marquee>
+      <marquee direction="right" scrollamount="15"><img src="comexamb.jpeg" alt=""><img src="comexamc.jpeg" alt=""></marquee>
     </body>
 </html>
