--- a/about.html
+++ b/about.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <style>
         body{
             background-color:#f8c291 ;
@@ -9,10 +12,15 @@
         img{
         height: 500px;
         }
+        h1{
+            text-shadow: 3px 3px 3px #808080;
+          }
 
     </style>
+    </head>
     <body>
-        <img src="pavan photo.jpeg"><img src="harikiran.jpeg" width="300px">
+        <h1> About Us </h1>
+        <img src="pavan photo.jpeg">
         <p>
             We know how education play's important role in life<br>
 To buld a good life we need good education<br>
