--- a/gallary.html
+++ b/gallary.html
@@ -5,7 +5,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
 <style>
 body{
-    background-color: lightsteelblue;
+    background-color: #70a1ff;
     
 }
 img{
@@ -15,6 +15,8 @@ img{
 }
     h1{
         font-family:"Dancing Script";
+        text-align:center;
+        text-shadow: 4px 4px 4px grey;
      }
     
 </style>
